# Dack

./: LICENSE  pyproject.toml
src/: dack.py
